# Phoenix-Engine

./: .gitattributes  .gitignore  BUILD_LINUX.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  PhoenixEngine.sln  PhoenixEngine.vcxproj  README.md  shell.nix
docs/: ASSETS.md  RELEASE_CHECKLIST.md  THIRD_PARTY.md  system-requirements.md
res/: phoenix.rc
scripts/: build.ps1  build.sh  compile_shaders.ps1  run.sh
shaders/: cull_objects.comp  depth_prepass.hlsl  particle.hlsl  skin_actors.comp  sky.hlsl  static_object.hlsl  terrain.hlsl
shaders/compiled/: cull_objects.comp.spv  depth_static.vert.spv  depth_terrain.vert.spv  particle.frag.spv  particle.vert.spv  skin_actors.comp.spv  sky.frag.spv  sky.vert.spv  static_object.frag.spv  static_object.vert.spv  terrain.frag.spv  terrain.vert.spv
src/: main.cpp
src/app/: bootstrap.cpp  bootstrap.h  loading_scheduler.cpp  loading_scheduler.h  map_session.cpp  map_session.h  renderer_uploads.cpp  renderer_uploads.h  water_resources.cpp  water_resources.h
src/assets/: data_index.cpp  data_index.h
src/audio/: audio_system.cpp  audio_system.h  map_audio_scene.cpp  map_audio_scene.h
src/character/: bot_manager.cpp  bot_manager.h  character_options.cpp  character_options.h  character_system.cpp  character_system.h  weapon_bone_map.cpp  weapon_bone_map.h  weapon_effect.cpp  weapon_effect.h
src/core/: logging.cpp  logging.h
src/effects/: effect_placement.cpp  effect_placement.h  effect_system.cpp  effect_system.h
src/platform/: sdl_window.cpp  sdl_window.h  win32_window.cpp  win32_window.h
src/renderer/: dds_loader.cpp  dds_loader.h  visibility_culling.cpp  visibility_culling.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_renderer_internal.h  vulkan_renderer_particles.cpp
src/runtime/: phoenix_runtime.cpp  phoenix_runtime.h  playable_spawn.cpp  playable_spawn.h
src/ui/: cpu_profiler.cpp  cpu_profiler.h  editor_panel.cpp  editor_panel.h  loading_screen.cpp  loading_screen.h  perf_hud.cpp  perf_hud.h  perf_hud_icons.h  weather_overlay.cpp  weather_overlay.h
src/world/: actor_scene.cpp  actor_scene.h  character_loader.cpp  character_loader.h  dg_loader.cpp  dg_loader.h  eft_loader.cpp  eft_loader.h  mani_loader.cpp  mani_loader.h  mon_loader.cpp  mon_loader.h  phoenix_world_loader.cpp  phoenix_world_loader.h  portal_runtime.cpp  portal_runtime.h  sdata_loader.cpp  sdata_loader.h  seed_constants.inc  smod_loader.cpp  smod_loader.h  svmap_loader.cpp  svmap_loader.h  vani_loader.cpp  vani_loader.h  water_constants.h  wld_loader.cpp  wld_loader.h
